# agent-spec

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  SECURITY.md  VERSION
pyagentspec/: AGENTS.md  pyproject.toml  requirements-dev-common.txt  requirements-dev-github.txt  requirements-dev.txt  setup.cfg  setup.py
pyagentspec/constraints/: constraints.txt  constraints_dev.txt
pyagentspec/src/pyagentspec/: _component_registry.py  _lazy_loader.py  agent.py  auth.py  component.py  managerworkers.py  swarm.py  versioning.py
pyagentspec/src/pyagentspec/adapters/: _agentspecexporter.py  _agentspecloader.py  _tools_common.py  _url.py  _utils.py
pyagentspec/src/pyagentspec/datastores/: __init__.py
pyagentspec/src/pyagentspec/evaluation/: AGENTS.md  __init__.py  _utils.py
pyagentspec/src/pyagentspec/llms/: __init__.py  authconfig.py  generationconfig.py  genericllmconfig.py  llmconfig.py  llmendpoint.py  ocigenaiconfig.py  ollamaconfig.py  openaicompatibleconfig.py  openaiconfig.py  providerconfig.py  vllmconfig.py
pyagentspec/src/pyagentspec/mcp/: clienttransport.py  tools.py
pyagentspec/src/pyagentspec/serialization/: deserializer.py  pydanticserializationplugin.py  serializationcontext.py  serializer.py
pyagentspec/tests/: conftest.py  retry_test.py  test_abstract_components.py  test_agentspecloader_stdio.py  test_bare_llmconfig_adapter_dispatch.py  test_docstring.py  test_schema_generation.py  test_sub_agents.py
pyagentspec/tests/adapters/: conftest.py  server_utils.py  test_generic_llm_config_adapters.py  test_remote_tool_retry_policy_cases.py  test_template_rendering.py  test_url.py
pyagentspec/tests/agentspec_configs/: example_serialized_agent_with_tools_and_toolboxes_25_4_2.yaml  example_serialized_agent_with_tools_and_toolboxes_26_2_0.yaml
pyagentspec/tests/evaluation/: conftest.py  test_evaluator.py
pyagentspec/tests/serialization/: test_agent.py  test_auth.py  test_generic_llm_config.py  test_llm_config.py  test_mcp_tools.py  test_sensitive_fields.py
pyagentspec/tests/validation/: test_llmconfig.py
(+382 files in other folders)
