[build-system]
requires = [
    # lower bound 78.1.1 to address CVE-2025-47273
    "setuptools>=78.1.1,<82.0.0",
    "wheel",
    # setuptools-scm lets us include all necessary files (e.g. .pyx files) in the source
    # distribution (sdist) without needing a MANIFEST.in file.
    "setuptools-scm == 7.1.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100  # should be the same as black above

[[tool.mypy.overrides]]
module = [
    'tests.*',
    'setup',
]
ignore_errors = true
