[metadata]
description_file = README

[tool:pytest]
asyncio_mode = auto
filterwarnings =
    # We decide to raise error for warnings in order to make sure that we address them or at least
    # consciously ignore them. If you write code that intentionally raises warnings, you can
    # capture that warnings are raised using `with pytest.warns(WarningClass):`. See pytest
    # documentation: https://docs.pytest.org/en/7.1.x/how-to/capture-warnings.html#warns
    error
    ignore::ResourceWarning
    # Crew AI warnings
    ignore:Cannot set an attribute on 'crewai.rag' for child module:ImportWarning
    ignore:importing 'Const' from 'astroid' is deprecated:DeprecationWarning
    ignore:Support for class-based `config` is deprecated:DeprecationWarning
    ignore:The `__fields__` attribute is deprecated, use the `model_fields` class property instead:DeprecationWarning
    # LangGraph warnings in python 3.14
    ignore:ForwardRef._evaluate is a private API and is retained for compatibility:DeprecationWarning
    ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal:DeprecationWarning
    # from mcp sdk
    ignore:Use `streamable_http_client` instead.:DeprecationWarning
    ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14 or greater:UserWarning

[mypy]
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]
